--- a/ProjectCBF12/Packages/manifest.json
+++ b/ProjectCBF12/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.inputsystem": "1.5.1",
     "com.unity.package-validation-suite": "0.23.4-preview",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
